tools/k8s/overlays/production/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: arametrics-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
#     # nginx.ingress.kubernetes.io/use-regex: "true"
#     cert-manager.io/cluster-issuer: letsencrypt-prod
# spec:
#   tls:
#     - hosts:
#         - dev.arametrics.app
#       secretName: arametrics-dev-tls
#   rules:
#     - host: dev.arametrics.app
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: web
#                 port:
#                   number: 3000
#           - path: /api
#             pathType: Prefix
#             backend:
#               service:
#                 name: api
#                 port:
#                   number: 4000
#           - path: /auth
#             pathType: Prefix
#             backend:
#               service:
#                 name: auth
#                 port:
#                   number: 4001
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: arametrics-ingress
#   annotations:
#     cert-manager.io/cluster-issuer: "letsencrypt-prod"
#     nginx.ingress.kubernetes.io/ssl-redirect: "true"
# spec:
#   ingressClassName: nginx
#   tls:
#   - hosts:
#     - dev.arametrics.app
#     secretName: dev-arametrics-cert
#   rules:
#     - host: dev.arametrics.app
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: web
#                 port:
#                   number: 3000
#           - path: /api
#             pathType: Prefix
#             backend:
#               service:
#                 name: api
#                 port:
#                   number: 4000

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: arametrics-ingress
#   annotations:
#     cert-manager.io/cluster-issuer: "letsencrypt-prod"
#     nginx.ingress.kubernetes.io/ssl-redirect: "true"
#     nginx.ingress.kubernetes.io/rewrite-target: /$2
#     nginx.ingress.kubernetes.io/use-regex: "true"
# spec:
#   ingressClassName: nginx
#   tls:
#     - hosts:
#         - dev.arametrics.app
#       secretName: dev-arametrics-cert
#   rules:
#     - host: dev.arametrics.app
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: web
#                 port:
#                   number: 3000
#           - path: /api(/|$)(.*)     # ✅ regex path must still start with /
#             pathType: ImplementationSpecific
#             backend:
#               service:
#                 name: api
#                 port:
#                   number: 4000

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arm-ingress-prod
  namespace: prod
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - arametrics.app
      secretName: arm-ingress-prod-tls
  rules:
    - host: arametrics.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 3000
